# bailiwick

./: README.md  lint-flake8.sh  lint-pylint.sh  lint-pyre.sh  pyproject.toml  test-pytest.sh
.github/workflows/: pythonlinters.yml  pythontests.yml
bailiwick/: __init__.py  collections.py  context.py  context_dict.py  errors.py
docs/: context0.py  globals-blog  howto.rst  index.rst  what-can-you-do-with-a-context
tests/: driver.py
tests/units/: test_context.py  test_units.py
tests/units/collections/: test_contextdict.py  test_freezer.py
