[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "bailiwick"
version = "0.0.0.dev0"
description = "Manage program contexts"
authors = ["Toshio Kuratomi <a.badger@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/abadger/bailiwick"
packages = [
    { include = "bailiwick" },
    { include = "tests", format = "sdist" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
flake8 = ">= 3.8.0"
codecov = "^2.0.22"
pyre-check = "^0.0.46"
pylint = "^2.5.2"

[tool.isort]
line_length = 100
multi_line_output = 0
balanced_wrapping = true
